--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,9 +2,22 @@
 <h3><%= @product.cost %></h3>
 <h3><%= @product.country_of_origin %></h3>
 
+<% if @product.reviews.any? %>
+  <h2>Reviews:</h2>
+
+  <% @product.reviews.each do |review| %>
+    <ul>
+      <li>
+        <h4><%= link_to "#{review.author}: #{review.rating}", product_review_path(@product, review)%></h4>
+        <p><%= review.content_body %></p>
+      </li>
+    </ul>
+<% end %>
+
+<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 <p><%= link_to "Edit", edit_product_path(@product) %></p>
-<p><%= link_to "Delete", product_path(@product),
-                         :data => {:confirm => "You sure?",
-                                   :method => "delete"} %></p>
+<p><%= link_to "Delete product", product_path(@product),
+                        :data => {:confirm => "Are you sure?",
+                                       :method => "delete"} %></p>
 
 <p><%= link_to "Return to products", products_path %></p>
