--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,6 +12,7 @@
         <p><%= review.content_body %></p>
       </li>
     </ul>
+  <% end %>
 <% end %>
 
 <p><%= link_to "Add a review", new_product_review_path(@product) %></p>
