--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,23 @@
 
   <body>
     <header>
-      <ul>
-        <li><a href="/"><h1>Mario's Food Store</h1></a></li>
-        <li><a href="/">Home</a></li>
-        <li><a href="/products">Products</a></li>
-        <li><a href="#">About Us</a></li>
-      </ul>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Mario's Food Store</a>
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/products">Products</a>
+            <a class="nav-link" href="#">About Us</a>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
-      <%= flash[:alert]%>
-      <%= flash[:notice]%>
-      <%= yield %>
+      <div class='container'>
+        <%= flash[:alert]%>
+        <%= flash[:notice]%>
+        <%= yield %>
+      </div>
     </main>
   </body>
 </html>
