--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,28 @@
-<h1>Products</h1>
+<div id='intro'>
+  <h2>Welcome to Mario's!</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
 
-<% if @products.any? %>
+<div class='scope-list'>
+  <h3>Most Popular</h3>
   <ul>
-    <% @products.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
+    
   </ul>
-<% else %>
-  <p>There are no products yet.</p>
-<% end %>
+</div>
+
+<div class='scope-list'>
+  <h3>Recently Added</h3>
+  <ul>
+    
+  </ul>
+</div>
+
+<div class='scope-list'>
+  <h3>Local Products</h3>
+  <ul>
+    
+  </ul>
+</div>
 
 
 <p><%= link_to "Create new product", new_product_path %></p>
