seperate filtered product index page with an all page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="/"><h1>Mario's Food Store</h1></a></li>
         <li><a href="/">Home</a></li>
-        <li><a href="/products">Products</a></li>
+        <li><a href="products/all">Products</a></li>
         <li><a href="#">About Us</a></li>
       </ul>
     </header>
