--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,21 +6,25 @@
 <div class='scope-list'>
   <h3>Most Popular</h3>
   <ul>
-    
+ 
   </ul>
 </div>
 
 <div class='scope-list'>
   <h3>Recently Added</h3>
   <ul>
-    
+    <%= @products.three_most_recent.each do |product| %>
+      <li><%= link_to product.name, product_path(product) %></li>
+    <% end %>
   </ul>
 </div>
 
 <div class='scope-list'>
   <h3>Local Products</h3>
   <ul>
-    
+    <%= @products.usa.each do |product| %>
+      <li><%= link_to product.name, product_path(product) %></li>
+    <% end %>
   </ul>
 </div>
 
