--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/products/all">Products</a></li>
         <li><a href="#">About Us</a></li>
+        <li><%= link_to "Add new product", new_product_path %></li>
       </ul>
     </header>
     <main>
