--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,29 +3,31 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 
-<div class='scope-list'>
-  <h3>Most Popular</h3>
-  <ul>
-    <% @products.most_reviews.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
-  </ul>
-</div>
-
-<div class='scope-list'>
-  <h3>Recently Added</h3>
-  <ul>
-    <% @products.three_most_recent.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
-  </ul>
-</div>
-
-<div class='scope-list'>
-  <h3>Local Products</h3>
-  <ul>
-    <% @products.usa.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
-  </ul>
+<div id='scopes'>
+  <div class='scope-list'>
+    <h3>Most Popular</h3>
+    <ul>
+      <% @products.most_reviews.each do |product| %>
+        <li><%= link_to product.name, product_path(product) %></li>
+      <% end %>
+    </ul>
+  </div>
+  
+  <div class='scope-list'>
+    <h3>Recently Added</h3>
+    <ul>
+      <% @products.three_most_recent.each do |product| %>
+        <li><%= link_to product.name, product_path(product) %></li>
+      <% end %>
+    </ul>
+  </div>
+  
+  <div class='scope-list'>
+    <h3>Local Products</h3>
+    <ul>
+      <% @products.usa.each do |product| %>
+        <li><%= link_to product.name, product_path(product) %></li>
+      <% end %>
+    </ul>
+  </div>
 </div>
