--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,24 +1,31 @@
-<h1><%= @product.name %></h1>
-<h3>$<%= @product.cost %></h3>
-<h3><%= @product.country_of_origin %></h3>
+<div class='top-info'>
+  <h1><%= @product.name %></h1>
+  <h3>$<%= @product.cost %></h3>
+  <h3>Country of Origin: <%= @product.country_of_origin %></h3>
+  
+</div>
 
-<% if @product.reviews.any? %>
+
+  <% if @product.reviews.any? %>
   <h2>Reviews:</h2>
-
-  <% @product.reviews.each do |review| %>
-    <ul>
+  <div id='review-wrap'>
+  <ul id='reviews-list'>
+    <% @product.reviews.each do |review| %>
       <li>
         <h4><%= link_to "#{review.author}: #{review.rating}", product_review_path(@product, review)%></h4>
         <p><%= review.content_body %></p>
       </li>
+    <% end %>
     </ul>
   <% end %>
-<% end %>
-
-<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
-<p><%= link_to "Edit", edit_product_path(@product) %></p>
-<p><%= link_to "Delete product", product_path(@product),
-                        :data => {:confirm => "Are you sure?",
-                                       :method => "delete"} %></p>
-
-<p><%= link_to "Return to products", products_path %></p>
+  
+  <div class = 'bottom-settings'>
+    <p class='btn btn-success'><%= link_to "Add a review", new_product_review_path(@product) %></p>
+    <p class='btn btn-warning'><%= link_to "Edit", edit_product_path(@product) %></p>
+    <p class='btn btn-danger'><%= link_to "Delete product", product_path(@product),
+                            :data => {:confirm => "Are you sure?",
+                                           :method => "delete"} %></p>
+    
+    <p class='btn btn-secondary'><%= link_to "Return to products", products_path %></p>
+  </div>
+</div>
