--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
         <li><a href="/"><h1>Mario's Food Store</h1></a></li>
         <li><a href="/">Home</a></li>
         <li><a href="/products/all">Products</a></li>
-        <li><a href="#">About Us</a></li>
         <li><%= link_to "Add new product", new_product_path %></li>
+        <li><%= link_to "Log In / Sign Up", new_user_session_path %></li>
       </ul>
     </header>
     <main>
