--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,11 @@
         <li><a href="/">Home</a></li>
         <li><a href="/products/all">Products</a></li>
         <li><%= link_to "Add new product", new_product_path %></li>
-        <li><%= link_to "Log In / Sign Up", new_user_session_path %></li>
+        <% if current_user %>
+          <li><%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+        <% else %>
+          <li><%= link_to "Sign up", new_user_session_path %> | <%= link_to "Sign in", new_user_registration_path %></li>
+        <% end %>
       </ul>
     </header>
     <main>
