--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,17 @@
         <li><a href="/"><h1>Mario's Food Store</h1></a></li>
         <li><a href="/">Home</a></li>
         <li><a href="/products/all">Products</a></li>
-        <li><%= link_to "Add new product", new_product_path %></li>
+
+        <% if current_user && current_user.admin? %>
+          <li><%= link_to "Add new product", new_product_path %></li>
+        <% end %>
+
         <% if current_user %>
           <li><%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
         <% else %>
           <li><%= link_to "Sign up", new_user_session_path %> | <%= link_to "Sign in", new_user_registration_path %></li>
         <% end %>
+        
       </ul>
     </header>
     <main>
