--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,11 +22,11 @@
   <div class = 'bottom-settings'>
   <% if current_user && current_user.admin? %>
     <%= button_to "Add a review", new_product_review_path(@product), class: 'btn btn-success' %>
-    <%= button_to "Edit", edit_product_path(@product), class: 'btn btn-warning' %>
-    <%= button_to "Delete product", product_path(@product), class: 'btn btn-danger',
+    <%= button_to "Edit Product", edit_product_path(@product), class: 'btn btn-warning' %>
+    <%= button_to "Delete Product", product_path(@product), class: 'btn btn-danger',
                                     :data => {:confirm => "Are you sure?",
                                                   :method => "delete"} %>
   <% end %>
-    <%= button_to "Return to products", products_path, class: 'btn btn-secondary' %>
+    <%= button_to "Return to products", products_path, class: 'btn btn-primary', :method => :get %>
   </div>
 </div>
