--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -3,9 +3,11 @@
 <h2>Review: <%= @review.author %>, <%= @review.rating %></h2>
 <h3><%= @review.content_body %></h3>
 
-<p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
-<p><%= link_to "Delete review", product_review_path(@product, @review),
+<% if current_user && current_user.admin? %>
+<%= button_to "Edit review", edit_product_review_path(@product, @review), class: "btn btn-warning" %>
+<%= button_to "Delete review", product_review_path(@product, @review), class: "btn btn-danger",
                         :data => {:confirm => "Are you sure?",
-                                       :method => "delete"} %></p>
+                                      :method => "delete"} %>
+<% end %>
 
-<p><%= link_to "Return to product", product_path(@product) %></p>
+<%= button_to "Return to product", product_path(@product), class: "btn btn-primary", :method => :get %>
