--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,8 @@
   <% if current_user && current_user.admin? %>
     <%= button_to "Add a review", new_product_review_path(@product), class: 'btn btn-success' %>
     <%= button_to "Edit Product", edit_product_path(@product), class: 'btn btn-warning' %>
-    <%= button_to "Delete Product", product_path(@product), class: 'btn btn-danger',
+    <%= button_to "Delete Product", product_path(@product), class: 'btn btn-danger', 
+                                    :method => :delete,
                                     :data => {:confirm => "Are you sure?",
                                                   :method => "delete"} %>
   <% end %>
