--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <% if current_user %>
           <li><%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
         <% else %>
-          <li><%= link_to "Sign up", new_user_session_path %> | <%= link_to "Sign in", new_user_registration_path %></li>
+          <li><%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
         
       </ul>
