--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,10 +70,14 @@ header a:hover {
   align-items: center;
 }
 
-.bottom-settings p {
+.btn-primary {
+  margin-bottom: 3em;
+}
+
+.bottom-settings .btn {
   display: flex;
   flex-direction: column;
-  margin-top: 3em;
+  margin-bottom: 3em;
 }
 
 .bottom-settings a {
