add more styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
     </header>
     <main>
       <div class='container'>
-        <%= flash[:alert]%>
-        <%= flash[:notice]%>
+        <p class='center'><%= flash[:alert]%></p>
+        <p class='center'><%= flash[:notice]%></p>
         <%= yield %>
       </div>
     </main>
