--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,10 @@ body {
   padding: 2em;
 }
 
+.center {
+  text-align: center;
+}
+
 header {
   background-color: #dda15e;
 }
@@ -70,14 +74,16 @@ header a:hover {
   align-items: center;
 }
 
-.btn-primary {
-  margin-bottom: 3em;
+.top-button {
+  display: inline;
 }
 
-.bottom-settings .btn {
+.bottom-settings {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin-bottom: 3em;
+  justify-content: space-evenly;
+  margin-top: 3em;
 }
 
 .bottom-settings a {
