--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,3 +89,9 @@ header a:hover {
 .bottom-settings a {
   color: black;
 }
+
+#form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
