--- a/app/views/layouts/_review_form.html.erb
+++ b/app/views/layouts/_review_form.html.erb
@@ -1,11 +1,13 @@
 <%= render 'layouts/errors', :object => @review %>
 
-<%= form_for [@product, @review] do |f| %>
-  <%= f.label :rating %>
-  <%= f.text_field :rating %>
-  <%= f.label :author %>
-  <%= f.text_field :author %>
-  <%= f.label :content_body %>
-  <%= f.text_area :content_body %>
-  <p><%= f.submit %></p>
-<% end %>
+<div id = 'form'>
+  <%= form_for [@product, @review] do |f| %>
+    <%= f.label :rating %>
+    <%= f.text_field :rating %>
+    <%= f.label :author %>
+    <%= f.text_field :author %>
+    <%= f.label :content_body %>
+    <%= f.text_area :content_body %>
+    <p><%= f.submit %></p>
+  <% end %>
+</div>
