--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,3 +95,11 @@ header a:hover {
   flex-direction: column;
   align-items: center;
 }
+
+#rating {
+  text-align: center;
+}
+
+.stars {
+  display: inline;
+}
