--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,3 +103,13 @@ header a:hover {
 .stars {
   display: inline;
 }
+
+#button-flex {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#review-page {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
