--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,6 +12,16 @@
       <% end %>
     </ul>
   </div>
+
+  <div id='scopes'>
+  <div class='scope-list'>
+    <h3>Top Rated</h3>
+    <ul>
+      <% Product.top_five.each do |product| %>
+        <li><%= link_to product.name, product_path(product) %></li>
+      <% end %>
+    </ul>
+  </div>
   
   <div class='scope-list'>
     <h3>Recently Added</h3>
