--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
   <h1><%= @product.name %></h1>
   <h3>$<%= @product.cost %></h3>
   <h3>Country of Origin: <%= @product.country_of_origin %></h3>
-  <h4>Average Rating: <%= @product.average_rating(@product) %></h4>
+  <h4>Average Rating: <%= @product.average_rating %></h4>
 </div>
 
 <div class = 'bottom-settings'>
